[project]
name = "mcp-reranker"
version = "0.1.1"
description = "A generic MCP server for document reranking using sentence-transformers."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-reranker = "mcp_reranker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"